# circuitpython_tool

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  circuitpython_tool.py  pyproject.toml
circuitpython_tool/: __init__.py  args.py  cli.py  config.py  device.py  fs.py  presets.py
completions/: complete.bash  complete.fish  complete.zsh
cpp/: CMakeLists.txt  uf2_exit.cc
docs/: README.md  requirements.txt
docs/source/: cli_prolog.rst  conf.py  generated_cli_docs.rst  index.rst
docs/source/cli/: generated.rst  reference.rst
docs/source/examples/: example.py  examples.rst
docs/source/internal/: workflows.rst
src/: __init__.py  cli.py  config.py  device.py  fs.py
src/circuitpython_tool/: __init__.py  async_iter.py  boards.py  cli.py  command_graph.py  completion.py  config.py  device.py  dirs.py  fake_device.py  fs.py  inotify.py  inotify_cli.py  iter.py  params.py  query.py  real_device.py  render.py  request_cache.py  shared_state.py  uf2.py
src/circuitpython_tool/cli/: __init__.py  cli.py  commands.py  completion.py  config.py  decorators.py  label_commands.py  params.py  shared_state.py  uf2_commands.py
src/circuitpython_tool/fs/: __init__.py  fs.py  inotify.py
src/circuitpython_tool/hw/: __init__.py  device.py  fake_device.py  partition.py  real_device.py  shell.py  udev.py  uf2_device.py
src/circuitpython_tool/static/: README.md  uf2_exit.uf2
src/circuitpython_tool/tools/: command_graph.py  command_info.py  inotify_cli.py  shell_completer.py  sphinx_docs.py
src/circuitpython_tool/uf2/: __init__.py  block.py  board.py
tests/: test_async_iter.py  test_cli.py  test_config.py  test_fake_device.py  test_fs.py  test_inotify.py  test_iter.py  test_real_device.py  test_render.py  test_uf2.py
tests/cli/: test_cli.py  test_commands.py  test_config.py
tests/fs/: test_fs.py  test_inotify.py
tests/hw/: test_fake_device.py  test_real_device.py  test_udev.py
tests/uf2/: test_block.py  test_board.py
