[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuitpython-tool"
version = "0.1.0"
description = 'TODO'
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Diony Rosa", email = "dhrosa+dev@gmail.com" },
]
dependencies = ["tomlkit", "inotify_simple", "rich", "click", "rich-click", "requests"]

[project.scripts]
circuitpython-tool = "circuitpython_tool:main"

[tool.hatch.envs.style]
dependencies = ["setuptools", "isort", "black", "pylama", "mypy", "pytest", "types-requests"]

[tool.hatch.envs.style.scripts]
format = [
       "isort --color .",
       "black .",
]
check = [
      "pylama .",
      "mypy --strict --pretty .",
] 
all = [
    "hatch run style:format",
    "hatch run style:check",
]

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
all = ["pytest --no-header --verbose"]

[tool.hatch.envs.completions.scripts]
generate = [
         "_CIRCUITPYTHON_TOOL_COMPLETE=bash_source circuitpython-tool > completions/complete.bash",
         "_CIRCUITPYTHON_TOOL_COMPLETE=zsh_source circuitpython-tool > completions/complete.zsh",
         "_CIRCUITPYTHON_TOOL_COMPLETE=fish_source circuitpython-tool > completions/complete.fish",
]

[tool.hatch.envs.docs]
dependencies = ["rich-codex"]

[tool.hatch.envs.docs.scripts]
generate = ["rich-codex --use-pty --skip-git-checks --no-confirm --terminal-width 100"]