[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuitpython-tool"
description = 'TODO'
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Diony Rosa", email = "dhrosa+dev@gmail.com" },
]
readme = "docs/README.md"
dynamic = ["version"]

dependencies = ["tomlkit", "inotify_simple", "rich", "click", "rich-click"]

[project.urls]
"Source code" = "https://github.com/dhrosa/circuitpython_tool"

[project.scripts]
circuitpython-tool = "circuitpython_tool:main"

[tool.hatch.version]
path = "src/circuitpython_tool/__init__.py"

[tool.hatch.envs.style]
dependencies = ["setuptools", "isort", "black", "pylama", "mypy", "pytest"]

[tool.hatch.envs.style.scripts]
format = [
       "isort --color .",
       "black .",
]
check = [
      "pylama .",
      "mypy --strict --pretty .",
] 
all = [
    "hatch run style:format",
    "hatch run style:check",
]

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
all = ["pytest --no-header --verbose -vv"]

[tool.hatch.envs.completions.scripts]
generate = [
         "_CIRCUITPYTHON_TOOL_COMPLETE=bash_source circuitpython-tool > completions/complete.bash",
         "_CIRCUITPYTHON_TOOL_COMPLETE=zsh_source circuitpython-tool > completions/complete.zsh",
         "_CIRCUITPYTHON_TOOL_COMPLETE=fish_source circuitpython-tool > completions/complete.fish",
]

[tool.hatch.envs.docs]
dependencies = ["rich-codex"]

[tool.hatch.envs.docs.scripts]
generate = ["rich-codex --use-pty --skip-git-checks --no-confirm --terminal-width 100"]